# django-bedrock

./: README.md
project-template/: .editorconfig  .gitignore  README.md  docker-compose.prod-test.yml  docker-compose.yml  package-lock.json  package.json  pylintrc  pyproject.toml  setup.cfg  vite.config.mjs
project-template/config/dev/backend/: Dockerfile
project-template/config/dev/frontend/: Dockerfile
project-template/config/dev/nginx/: nginx-startup.sh  nginx-tlswrapper.conf  nginx.conf  rate-limit.html
project-template/config/prod/: Dockerfile  nginx.conf  start.sh
project-template/main/: api_helpers.py  apps.py  context_processors.py  fields.py  forms.py  gunicorn_logging.py  logging.py  middleware.py  models.py  settings.py  signals.py  tasks.py  threadlocals.py  urls.py
project-template/main/auth/: base.py  checks.py  instances.py  middleware.py  mixins.py
project-template/main/frontend/css/: main.scss  vendor.scss
project-template/main/frontend/js/: main.js
project-template/main/management/commands/: create_debug_http_token.py  reset_db.py  seeddb.py
project-template/main/migrations/: 0001_initial.py
project-template/main/templates/: 400.html  403.html  404.html  500.html
project-template/main/templates/crispy_bedrock/: betterform.html  display_form.html  field.html  (+6 more)
project-template/main/templatetags/: security.py
project-template/main/tests/: base.py  factories.py  test_api_helpers.py  test_views.py
project-template/main/views/: error.py  pages.py  util.py
project-template/scripts/: copy-frontend-assets.sh  dev-backend-attach.sh
(+18 files in other folders)
