[tool.poetry]
name = "django-starter-template"
description = ""
version = "0.1.0"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"
psycopg = "^3.2.3"
whitenoise = "^6.8.2"

# Hosted deps
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.1"
flake8 = "^7.1.1"
pylint = "^3.3.3"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
